fixed gap in reservation page buttons

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -102,3 +102,13 @@
     display: flex;
     gap: 10px;
 }
+.form-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 5px;
+}
+.back-button-container {
+    margin-top: 25px;
+    text-align: center;
+}
